Second commit: fixes for JitPack