@@ -1,7 +1,6 @@
 package com.jsatx.io;
 
-import com.jsatx.core.BasicDataFrame;
-import com.jsatx.core.Row;
+import com.jsatx.core.DFrame;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -12,19 +11,14 @@ import java.util.stream.Collectors;
 public class CsvUtils {
 
     // ✅ Users can call this directly without try/catch
-    public static BasicDataFrame readCSV(String filePath) {
-        try {
-            String csvText = new String(Files.readAllBytes(Paths.get(filePath)));
-            return BasicDataFrame.fromCSV(csvText);
-        } catch (IOException e) {
-            System.err.println("❌ Error reading CSV file: " + filePath);
-            e.printStackTrace();
-            return new BasicDataFrame(List.of(), List.of()); // return empty DataFrame
-        }
+    public static DFrame readCSV(String filePath) throws IOException {
+        String csvText = Files.readString(Paths.get(filePath));
+        return DFrame.fromCSV(csvText);
     }
 
+
     // ✅ Same logic for writing CSV (no need for try/catch in user code)
-    public static void toCSV(BasicDataFrame df, String outputPath) {
+    public static void toCSV(DFrame df, String outputPath) {
         try {
             List<String> lines = df.getRows().stream()
                     .map(row -> row.getData().stream()
